# CC-Race-Wheel-Software

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
.run/: Debug Test.run.xml
Documentation/Tracealyzer/OpenOCD Files/: RP2040 OpenOCD_Command.txt  pico-probe-FreeRTOS.cfg
include/FreeRTOS/: FreeRTOSConfig.h
include/TraceRecorder/config/: trcConfig.h  trcKernelPortConfig.h  trcSnapshotConfig.h
include/TraceRecorder/extras/TraceRecorderInit/: TraceRecorderInit.cpp
include/tusb_config/: custom_gamepad.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
